--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,17 @@ __pycache__/
 *$py.class
 
 .idea/
-.vscode/
+.vscode
 # C extensions
 *.so
 
-# csv
-*.csv
+
+*.json
 
 # data
-data/
+data/train/
+data/test/
+data/validation
 flagged/
 gradio_cached_examples/
 model/
